2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>

	* gnome-default-applications.xml.in: don't list the oudated evolution
	  versions nor the text web browsers (Closes: #499327)

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Distcheck fixes.

2007-10-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-default-applications.xml.in: replace obsolete "orca -m" command
	by new "orca -e magnifier" (bug #489973)

2007-10-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Stephane Loeuillet <leroutier@gmail.com>

	* Makefile.am: use standard xdg autostart directory instead of gnome
	one (bug #481740)

2007-09-19  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Michael Monreal <infernux@web.de>

	* gnome-da-capplet.c: replace mail and multimedia icon names with
	Tangoified versions (bug #470386)

2007-09-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Patrick Wade <patrick.wade@sun.com>

	* gnome-default-applications-properties.glade: make accelerators for
	the accessibility tools page unique (bug #474308)

2007-08-21  Philip Withnall <bugzilla@tecnocode.co.uk>

	* gnome-default-applications.xml.in: use new -new-tab and -new-window
	arguments instead of -remote for Firefox tab and window commands.
	Closes bug #393204.

2007-08-17  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Sven Arvidsson <sa@whiz.se>

	* gnome-default-applications.xml.in: add browser and mail entries for
	Iceape, the debranded Seamonkey version used by Debian (bug #467472)

2007-08-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-at-commandline.in.in: don't use '==', and improve
	portability with empty strings

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* default-applications-accessibility.desktop.in.in:
	* gnome-at-mobility.desktop.in.in:
	* gnome-at-visual.desktop.in.in: remove spurious desktop entries
	(bug #444787)

2007-07-12  Matthias Clasen  <mclasen@redhat.com>

	* gnome-default-applications-properties.glade: