@@ -139,6 +139,14 @@
       <run-in-terminal>false</run-in-terminal>
       <netscape-remote>false</netscape-remote>
     </web-browser>
+    <web-browser>
+      <_name>Midori</_name>
+      <executable>midori</executable>
+      <command>midori %s</command>
+      <icon-name>web-browser</icon-name>
+      <run-in-terminal>false</run-in-terminal>
+      <netscape-remote>false</netscape-remote>
+    </web-browser>
   </web-browsers>
 
   <mail-readers>
